[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/gameplay/Plant.gd" type="Script" id=1]

[node name="Plant" type="Node"]
script = ExtResource( 1 )

[node name="ToPhase1" type="Timer" parent="."]
one_shot = true

[node name="ToPhase2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ToPhase1" to="." method="_on_ToPhase1_timeout"]
[connection signal="timeout" from="ToPhase2" to="." method="_on_ToPhase2_timeout"]
